# opaque

./: .gitignore  .gitmodules  README.md  Run.sh
src/enclave/App/: App.cpp  SGXEnclave.h
src/enclave/Common/: common.h
src/enclave/Enclave/: CMakeLists.txt  Clip.cpp  Clip.h  Crypto.cpp  Enclave.cpp  Enclave.edl  Flatbuffers.cpp  Flatbuffers.h  Gradient.cpp  Gradient.h  Makefile  Noise.cpp  Noise.h  Stake.cpp  Stake.h
src/enclave/Enclave/embed_rust/: Cargo.toml
src/enclave/Enclave/embed_rust/src/: gradient.rs  lib.rs  mockup_linalg.rs  noise.rs
src/enclave/Enclave/test_rust/: Cargo.toml
src/enclave/Enclave/test_rust/src/: main.rs
src/flatbuffers/: Hyper.fbs  Model.fbs
src/main/scala/edu/berkeley/cs/rise/opaque/: Utils.scala  strategies.scala
src/main/scala/edu/berkeley/cs/rise/opaque/execution/: SGXEnclave.scala  operators.scala
src/main/scala/edu/berkeley/cs/rise/opaque/logical/: operators.scala
src/main/scala/org/apache/spark/sql/: OpaqueDatasetFunctions.scala
