[package]
name = "embed_rust"
version = "0.1.0"
authors = ["spartazhihu <lun.wang@pku.edu.cn>"]

[lib]
name = "embed_rust"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
ndarray-sgx = { git = "https://github.com/sunblaze-optio/rust-ndarray", features = ["serde-1"] }
ndarray-rand-sgx = { git = "https://github.com/sunblaze-optio/rust-ndarray" }
serde-sgx = { git = "https://github.com/ekiden/serde" }
serde_cbor-sgx = { git = "https://github.com/ekiden/cbor" }
serde_derive = "1.0"
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk" }
sgx_rand = { git = "https://github.com/ekiden/rust-sgx-sdk" }
