[package]
name = "test_rust"
version = "0.1.0"
authors = ["spartazhihu <lun.wang@pku.edu.cn>"]

[dependencies]
ndarray = { git = "https://github.com/bluss/rust-ndarray", features = ["serde-1"] }
ndarray-rand = { git = "https://github.com/bluss/rust-ndarray" }
serde = { git = "https://github.com/serde-rs/serde" }
serde_cbor = { git = "https://github.com/pyfisch/cbor" }
serde_derive = "1.0"
rand = "0.4"
